@@ -5,7 +5,7 @@
   <title>Famechos</title>
   <link>https://www.famechos.me/</link>
   <description>Famechos - News Article</description>
-  <lastBuildDate>Sat, 12 Oct 2024 05:25:07 +0800</lastBuildDate>
+  <lastBuildDate>Sat, 12 Oct 2024 05:26:05 +0800</lastBuildDate>
 <item>
   <title>KPOP界大事！RIIZE昇瀚回歸、防弹少年团金碩珍新單曲、aespa登頂iTunes榜單</title>
   <link>https://www.famechos.me/news/KPOP界大事！RIIZE昇瀚回歸、防弹少年团金碩珍新單曲、aespa登頂iTunes榜單.html</link>
@@ -54,5 +54,11 @@
   <description>ATEEZ擴大歐洲巡迴演唱會至14場韓國男子組合ATEEZ將在歐洲舉行14場巡迴演唱會新增倫敦和柏林兩場演出這是他們朝向光芒權力之旅巡迴演唱會的一部分原本計劃在歐洲九個國家舉行12場演出ATEEZ的第10張迷你專輯GoldenHourPart1ATEEZ的第10張迷你專輯GoldenHourPart1於五月發行登上了告示牌二百大專輯...</description>
   <category>K-Pop</category>
   <pubDate>Sat, 12 Oct 2024 05:25:07 +0800</pubDate>
+</item><item>
+  <title>K-pop 商品銷售商的「粉絲剝削」行為只被罰款 300 萬？議員怒轟：懲罰太輕！</title>
+  <link>https://www.famechos.me/news/K-pop 商品銷售商的「粉絲剝削」行為只被罰款 300 萬？議員怒轟：懲罰太輕！.html</link>
+  <description>Kpop商品銷售商的懲罰太輕議員國會議員批評對於Kpop商品銷售商的不公平消費行為懲罰太輕不能有效地制止這些行為崔俊源議員在國會文化體育觀光委員會的聽證會上表示娛樂巨頭...</description>
+  <category>K-Pop</category>
+  <pubDate>Sat, 12 Oct 2024 05:26:05 +0800</pubDate>
 </item></channel>
 </rss>
