@@ -1,0 +1,265 @@
+<!DOCTYPE html>
+<head>
+<script type='application/ld+json'>
+{"@context": "https://schema.org", "@graph": [{"@type": "Article", "headline": "K-pop \u5546\u54c1\u92b7\u552e\u5546\u7684\u300c\u7c89\u7d72\u525d\u524a\u300d\u884c\u70ba\u53ea\u88ab\u7f70\u6b3e 300 \u842c\uff1f\u8b70\u54e1\u6012\u8f5f\uff1a\u61f2\u7f70\u592a\u8f15\uff01", "description": "K-pop \u5546\u54c1\u92b7\u552e\u5546\u7684\u300c\u7c89\u7d72\u525d\u524a\u300d\u884c\u70ba\u53ea\u88ab\u7f70\u6b3e 300 \u842c\uff1f\u8b70\u54e1\u6012\u8f5f\uff1a\u61f2\u7f70\u592a\u8f15\uff01", "url": "https://www.famechos.me/news/K-pop \u5546\u54c1\u92b7\u552e\u5546\u7684\u300c\u7c89\u7d72\u525d\u524a\u300d\u884c\u70ba\u53ea\u88ab\u7f70\u6b3e 300 \u842c\uff1f\u8b70\u54e1\u6012\u8f5f\uff1a\u61f2\u7f70\u592a\u8f15\uff01.html", "image": "https://www.famechos.me/images/banner.jpg", "datePublished": "2024-10-12T05:25:59.603074+08:00", "author": {"@type": "Person", "name": "Famechos"}, "publisher": {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me"}}, {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me", "logo": "https://www.famechos.me/icons/favicon.png"}, {"@type": "WebSite", "name": "Famechos", "url": "https://www.famechos.me"}]}
+</script>
+<link rel="canonical" href="https://www.famechos.me/news/K-pop 商品銷售商的「粉絲剝削」行為只被罰款 300 萬？議員怒轟：懲罰太輕！.html"/>
+<meta name="description" content="K-pop 商品銷售商因「粉絲剝削」行為被罰款 300 萬，引發議員怒轟，認為懲罰太輕！了解更多有關此事件的最新消息。">
+
+<meta name="keywords" content="K-pop, 粉絲剝削, 商品銷售商, 罰款, 議員, 懲罰太輕">
+
+	<link rel="stylesheet" href="../main-nav.css">
+	<link rel="stylesheet" href="../main-content.css">
+	<link rel="stylesheet" href="../main-small.css">
+	<link rel="stylesheet" href="../post.css">
+	<link rel="stylesheet" href="../main-footer.css">
+	<link rel="stylesheet" href="../news.css">
+ 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"> 
+	<link rel="stylesheet" href="https://fonts.googleapis.com/earlyaccess/notosanstc.css">
+        <meta property="og:url" content="https://www.famechos.me/news/K-pop 商品銷售商的「粉絲剝削」行為只被罰款 300 萬？議員怒轟：懲罰太輕！.html" />
+        <meta property="og:title" content="K-pop 商品銷售商的「粉絲剝削」行為只被罰款 300 萬？議員怒轟：懲罰太輕！" />
+        <meta property="og:description" content="K-pop 商品銷售商的「粉絲剝削」行為只被罰款 300 萬？議員怒轟：懲罰太輕！" />
+        <meta property="og:image" content="https://www.famechos.me/images/banner.jpg" />
+        <meta property="twitter:card" content="summary_large_image" />
+        <meta property="twitter:title" content="K-pop 商品銷售商的「粉絲剝削」行為只被罰款 300 萬？議員怒轟：懲罰太輕！" />
+        <meta property="twitter:description" content="K-pop 商品銷售商的「粉絲剝削」行為只被罰款 300 萬？議員怒轟：懲罰太輕！" />
+        <meta property="twitter:image" content="https://www.famechos.me/images/banner.jpg" />
+	<meta name="theme-color" content="white">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta property="og:locale" content="zh_TW" />
+        <meta property="og:site_name" content="Famechos" />
+	<meta property="og:type" content="article" />
+	<meta name="robots" content="index, follow" />
+	<meta name="author" content="Famechos" />
+        <meta name="referrer" content="origin">
+	<meta name="apple-mobile-web-app-capable" content="yes"/>
+        <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
+        <meta name="apple-mobile-web-app-title" content="Avoir"/>
+        <meta name="apple-touch-fullscreen" content="yes"/>
+        
+<style> * {box-sizing: border-box;margin: 0;padding: 0;font-family: 'Noto Sans TC', sans-serif;scroll-behavior: smooth;}</style>
+
+</head>
+
+<body>
+
+<nav class="nav">
+    <div class="nav-outerbox">
+      <div class="nav-inner-left">
+        <div class="nav-name-logo">
+          <img class="famechos-logo" src="../img/famechos_logo.png">
+          
+        </div>
+        <div class="nav-separate">
+          <p>|</p>
+        </div>
+        <div class="nav-type-1 nav-type">
+          <button class="nav-type-btn1 nav-type-btn">
+          <h2 class="nav-type-text">K-POP</h2>
+        </button>
+  
+        </div>
+        <div class="nav-type-2 nav-type">
+          <button class="nav-type-btn2 nav-type-btn">
+          <h2 class="nav-type-text">J-POP</h2>
+        </button>
+  
+        </div>
+        <div class="nav-type-3 nav-type">
+          <button class="nav-type-btn3 nav-type-btn">
+          <h2 class="nav-type-text">影視</h2>
+        </button>
+          
+        </div>
+        <div class="nav-type-4 nav-type">
+          <button class="nav-type-btn4 nav-type-btn">
+          <h2 class="nav-type-text">其他</h2>
+        </button>
+        </div>  
+      </div>
+      <div class="nav-inner-right">
+        <div class="nav-feedback-outer">
+          <button class="feedback-btn nav-type-btn">
+            <h2 class="nav-type-text">關於我們</h2>
+          </button>
+        </div>
+        <div class="nav-setting">
+          <button class="setting-btn nav-type-btn">
+            <h2 class="nav-type-text">私隱條款</h2>
+          </button>
+        </div>
+        <div class="nav-list">
+          <button id="list-btn" class="list-btn nav-type-btn">
+            <i class="bi bi-list"></i>
+          </button>
+        </div>
+
+      </div>
+
+      <div id="list" class="nav-list-outer">
+        <div class="nav-type-1 nav-type list-type">
+          <button class="list-type-btn">
+          <p>K-POP</p>
+          </button>
+        </div>
+
+        <div class="nav-type-2 nav-type list-type">
+          <button class="list-type-btn">
+          <p>J-POP</p>
+          </button>
+        </div>
+
+        <div class="nav-type-3 nav-type list-type">
+          <button class="list-type-btn">
+          <p>影視</p>
+          </button>
+        </div>
+
+        <div class="nav-type-4 nav-type list-type">
+          <button class="list-type-btn">
+          <p>其他</p>
+          </button>
+        </div>
+
+        <div class="nav-type-5 nav-type list-type">
+          <button class="list-type-btn">
+          <p>關於我們</p>
+          </button>
+        </div>
+
+        <div class="nav-type-6 nav-type list-type">
+          <button class="list-type-btn">
+          <p>私隱條款</p>
+          </button>
+
+        </div>  
+
+      </div>
+      
+    </div>
+  </nav>
+
+
+  <main>
+    <div class="news-main-outer">
+      <div class="news-title-outer">
+        <h1>K-pop 商品銷售商的「粉絲剝削」行為只被罰款 300 萬？議員怒轟：懲罰太輕！</h1>
+	</div>
+
+      <div class="news-content-outer">
+
+        <div class="news-info-outer">
+          <p class="news-content-type">K-Pop</p>
+          <p class="news-date">12/10/2024</p>
+        </div>
+	<p>國會議員批評，對於K-pop 商品銷售商的不公平消費行為，懲罰太輕，不能有效地制止這些行為。</p>
+<p>崔俊源議員在國會文化體育觀光委員會的聽證會上表示，娛樂巨頭海譜（Hybe）在三年內賣出價值1兆韓元的K-pop 商品，但只被罰款300萬韓元（約2,200美元），令人質疑懲罰的有效性。</p>
+<p>海譜和其他三家K-pop 巨頭YG、SM 和JYP 因為限制或拒絕履行合法的退款要求而被公正交易委員會罰款300萬韓元。這些公司被發現從事的不公平行為包括：</p>
+<ul>
+<li>拒絕退款給打開包裝的產品</li>
+<li>限制退款給有缺陷的產品的時間在購買後七天內</li>
+</ul>
+<p>根據當地法律，損壞或有缺陷的產品在三個月內可以全額退款。崔俊源議員表示，這些行為已經被糾正，因為監管機構已經開始調查這個案件。</p>
+<p>罰款只是公司在2021年至2024年上半年期間銷售的1.207兆韓元商品銷售額的一小部分，崔俊源議員說。商品銷售額佔海譜同期總收入6.211兆韓元的19.5%。根據您的要求，我處理了文章並刪除了不必要的部分，改寫了內容以符合您的身份和需求。以下是處理好的文章：</p>
+<p>議員呼籲加強對於名人商品消費者受到的不公平行為的監管，認為過於寬鬆的懲罰使得公司可以繼續利用粉絲對K-pop 藝人的熱愛。</p>
+<p>請注意，我已經刪除了宣傳部分、格式的段落、圖片來源和記者報道等無關文章主旨的句子，並改寫了內容以符合您的身份和需求。如果您需要進一步修改，請讓我知道。</p>
+
+<p>資料來源：Korea Herald</p>
+</div><div class ="news-vid-outer">
+<div class="related-vid-text-outer title-bar ">
+<p class="related-vid-text">相關影片：</p>
+</div>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/jLQxkMPn70g" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+
+<p class="news-text-inner">資料來源： YouTube</p>
+</div>
+
+
+ <div class ="related-news-outer title-bar">
+        <p class="related-news-text">相關新聞：</p>
+      </div>
+      
+      <div class ="related-news-box">
+        
+	<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/K-POP大爆炸！aespa、NCT、中本悠太、SF9、河成雲等大咖接連發新作，誰能奪下十月份的音樂王座？.html">K-POP大爆炸！aespa、NCT、中本悠太、SF9、河成雲等大咖接連發新作，誰能奪下十月份的音樂王座？</a>
+        </p>
+                
+	<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/戀愛的複雜情感！Yena新單曲《Nemo Nemo》巧妙隱喻愛情的傷與美.html">戀愛的複雜情感！Yena新單曲《Nemo Nemo》巧妙隱喻愛情的傷與美</a>
+        </p>
+                
+	<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/K-pop新革命！Trot與K-pop融合掀起韓國音樂新浪潮，林英雄、SM娛樂領軍.html">K-pop新革命！Trot與K-pop融合掀起韓國音樂新浪潮，林英雄、SM娛樂領軍</a>
+        </p>
+                
+      </div>
+
+    </div>
+
+    </main>
+ <footer class="footer">
+    <div class="footer-outer">
+
+
+      <div class="footer-up-outer">
+        <div class="footer-right-name-box">
+          <img class="famechos-logo-footer" src="../img/famechos_logo.png">
+        </div>
+        <div class="footer-right-text-box">
+          <p class="footer-right-text">每日為你提供最新、最全面的日韓資訊。</p>
+        </div>
+        <div class="footer-button-box">
+          <button class="facebook-btn footer-btn">
+            <i class="bi bi-facebook footer-logo"></i>
+          </button>
+          <button class="ig-btn footer-btn">
+            <i class="bi bi-instagram footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-twitter-x footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-envelope-fill footer-logo"></i>
+          </button>
+        </div>
+      </div>
+
+      <div class="footer-down-outer">
+        <div class="kpop-footer-box footer-box">
+          <p class="footer-text">K-POP</p>
+        </div>
+        <div class="jpop-footer-box footer-box">
+          <p class="footer-text">J-POP</p>
+        </div>
+        <div class="drama-footer-box footer-box">
+          <p class="footer-text">影視</p>
+        </div>
+        <div class="other-footer-box footer-box">
+          <p class="footer-text">其他</p>
+        </div>
+
+
+      </div>
+
+      <div class="copyright-outer">
+        <p class="copyright-text">
+          Copyright © 2024 by <strong>Famechos.me</strong> All Rights Reserved.
+        </p>
+      </div>
+
+      
+    </div>
+
+
+
+  </footer>
+
+<script src="../nav-list.js"></script>
+
+</body>
+</html>
