@@ -74,4 +74,10 @@
     <ns0:changefreq>weekly</ns0:changefreq>
     <ns0:priority>0.90</ns0:priority>
   </ns0:url>
+<ns0:url>
+    <ns0:loc>https://www.famechos.me/news/K-pop 商品銷售商的「粉絲剝削」行為只被罰款 300 萬？議員怒轟：懲罰太輕！.html</ns0:loc>
+    <ns0:lastmod>2024-10-12T05:26:05+08:00</ns0:lastmod>
+    <ns0:changefreq>weekly</ns0:changefreq>
+    <ns0:priority>0.90</ns0:priority>
+  </ns0:url>
 </ns0:urlset>
