@@ -9,3 +9,4 @@ https://www.koreaherald.com/view.php?ud=20241004050494
 https://tokyocheapo.com/entertainment/japanese-culture-and-tradition/where-to-see-geisha-in-tokyo/
 https://www.koreaherald.com/view.php?ud=20241001050096
 https://www.koreaherald.com/view.php?ud=20241002050512
+https://www.koreaherald.com/view.php?ud=20241010050640
